[gd_scene load_steps=54 format=2]

[ext_resource path="res://OrcPodcaster.gd" type="Script" id=1]
[ext_resource path="res://Enemies/OrcPODCASTER.png" type="Texture" id=2]
[ext_resource path="res://OrcStats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://LeftArea.gd" type="Script" id=5]
[ext_resource path="res://Hit_Hurt/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://RightArea.gd" type="Script" id=7]
[ext_resource path="res://UpArea.gd" type="Script" id=8]
[ext_resource path="res://DownArea.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "AttackDown"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.701 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 79, 80, 81, 82, 83, 84, 85, 78, 78 ]
}

[sub_resource type="Animation" id=2]
resource_name = "AttackLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 66, 67, 68, 69, 70, 71, 72, 65 ]
}

[sub_resource type="Animation" id=3]
resource_name = "AttackRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 92, 93, 94, 95, 96, 97, 98, 91 ]
}

[sub_resource type="Animation" id=4]
resource_name = "AttackUp"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 53, 54, 55, 56, 57, 58, 59, 52 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IdleDown"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 130 ]
}

[sub_resource type="Animation" id=6]
resource_name = "IdleLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 117 ]
}

[sub_resource type="Animation" id=7]
resource_name = "IdleRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 143 ]
}

[sub_resource type="Animation" id=8]
resource_name = "IdleUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 104 ]
}

[sub_resource type="Animation" id=9]
resource_name = "MagicDown"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 26 ]
}

[sub_resource type="Animation" id=10]
resource_name = "MagicLeft"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 13 ]
}

[sub_resource type="Animation" id=11]
resource_name = "MagicRight"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 39 ]
}

[sub_resource type="Animation" id=12]
resource_name = "MagicUp"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "magic_up_animation_finished"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "magic_up_state"
} ]
}

[sub_resource type="Animation" id=13]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 131, 132, 133, 134, 135, 136, 137, 138 ]
}

[sub_resource type="Animation" id=14]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 118, 119, 120, 121, 122, 123, 124, 125 ]
}

[sub_resource type="Animation" id=15]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 144, 145, 146, 147, 148, 149, 150, 151 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=16]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteOrc:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 105, 106, 107, 108, 109, 110, 111, 112 ]
}

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "MagicLeft"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "MagicDown"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "MagicRight"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "MagicUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=21]
blend_point_0/node = SubResource( 17 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 18 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 19 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 20 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=26]
resource_local_to_scene = true
blend_point_0/node = SubResource( 22 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 23 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 24 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 25 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "MoveLeft"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "MoveDown"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "MoveRight"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "MoveUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=31]
blend_point_0/node = SubResource( 27 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 28 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 29 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 30 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachine" id=36]
states/Magic/node = SubResource( 21 )
states/Magic/position = Vector2( 556, 290 )
states/OrcIdle/node = SubResource( 26 )
states/OrcIdle/position = Vector2( 556, 190 )
states/OrcWalk/node = SubResource( 31 )
states/OrcWalk/position = Vector2( 760, 190 )
transitions = [ "OrcIdle", "OrcWalk", SubResource( 32 ), "OrcWalk", "OrcIdle", SubResource( 33 ), "OrcIdle", "Magic", SubResource( 34 ), "Magic", "OrcIdle", SubResource( 35 ) ]
start_node = "OrcIdle"
graph_offset = Vector2( 0, 118.656 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=37]

[sub_resource type="CapsuleShape2D" id=38]
radius = 5.41142
height = 8.64413

[sub_resource type="CapsuleShape2D" id=39]
radius = 11.738
height = 31.9855

[sub_resource type="CircleShape2D" id=40]
radius = 219.608

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 79.2615, 159.612 )

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 83.2432, 161.564 )

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 166.529, 91.9361 )

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 142.712, 78.704 )

[node name="OrcPodcaster" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="SpriteOrc" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 21
hframes = 13
frame = 123

[node name="AnimationOrc" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 1 )
anims/AttackLeft = SubResource( 2 )
anims/AttackRight = SubResource( 3 )
anims/AttackUp = SubResource( 4 )
anims/IdleDown = SubResource( 5 )
anims/IdleLeft = SubResource( 6 )
anims/IdleRight = SubResource( 7 )
anims/IdleUp = SubResource( 8 )
anims/MagicDown = SubResource( 9 )
anims/MagicLeft = SubResource( 10 )
anims/MagicRight = SubResource( 11 )
anims/MagicUp = SubResource( 12 )
anims/MoveDown = SubResource( 13 )
anims/MoveLeft = SubResource( 14 )
anims/MoveRight = SubResource( 15 )
anims/MoveUp = SubResource( 16 )

[node name="OrcAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 36 )
anim_player = NodePath("../AnimationOrc")
active = true
parameters/playback = SubResource( 37 )
parameters/Magic/blend_position = Vector2( 0, 0 )
parameters/OrcIdle/blend_position = Vector2( 0, 0 )
parameters/OrcWalk/blend_position = Vector2( 0, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.11362, 24.9452 )
rotation = 1.5708
shape = SubResource( 38 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 1.55907, 6.23629 )
shape = SubResource( 39 )

[node name="OrcStats" parent="." instance=ExtResource( 3 )]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 0.164706, 0.0431373, 0.0431373, 1 )
position = Vector2( 1, 2 )
shape = SubResource( 40 )

[node name="LeftArea" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
position = Vector2( -137.626, 2.41969 )
shape = SubResource( 41 )

[node name="RightArea" type="Area2D" parent="."]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
position = Vector2( 132.422, 2.69009 )
shape = SubResource( 42 )

[node name="MagicTimer" type="Timer" parent="."]

[node name="UpArea" type="Area2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpArea"]
position = Vector2( -9.80591, -120.558 )
shape = SubResource( 43 )

[node name="DownArea" type="Area2D" parent="."]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownArea"]
position = Vector2( 0.640656, 110.714 )
shape = SubResource( 44 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="no_health" from="OrcStats" to="." method="_on_OrcStats_no_health"]
[connection signal="body_entered" from="LeftArea" to="LeftArea" method="_on_LeftArea_body_entered"]
[connection signal="body_entered" from="LeftArea" to="." method="_on_LeftArea_body_entered"]
[connection signal="body_exited" from="LeftArea" to="LeftArea" method="_on_LeftArea_body_exited"]
[connection signal="body_exited" from="LeftArea" to="." method="_on_LeftArea_body_exited"]
[connection signal="body_entered" from="RightArea" to="RightArea" method="_on_RightArea_body_entered"]
[connection signal="body_entered" from="RightArea" to="." method="_on_RightArea_body_entered"]
[connection signal="body_exited" from="RightArea" to="RightArea" method="_on_RightArea_body_exited"]
[connection signal="body_exited" from="RightArea" to="." method="_on_RightArea_body_exited"]
[connection signal="body_entered" from="UpArea" to="UpArea" method="_on_UpArea_body_entered"]
[connection signal="body_exited" from="UpArea" to="UpArea" method="_on_UpArea_body_exited"]
[connection signal="body_entered" from="DownArea" to="DownArea" method="_on_DownArea_body_entered"]
[connection signal="body_exited" from="DownArea" to="DownArea" method="_on_DownArea_body_exited"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]
